name:                ErrorProp
version:             0.1.0.0
synopsis:            error/uncertainty propagation
description:         a work in progress
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt <vogt.adam@gmail.com>
maintainer:          Adam Vogt <vogt.adam@gmail.com>
category:            Math
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.8.2

library
  exposed-modules:     ErrorProp.MonteCarlo,
                       ErrorProp.Linearized,
                       ErrorProp.QuasiMC
  other-extensions:    FlexibleContexts,
                       FlexibleInstances,
                       DefaultSignatures,
                       Rank2Types,
                       BangPatterns
  build-depends:       base >=4.6 && <4.8,
                       mersenne-random >=1.0 && <1.1,
                       containers >=0.5 && <0.6,
                       vector >=0.10 && <0.11,
                       xformat >=0.1 && <0.2,
                       ad >=4.2 && <4.3,
                       pretty >=1.1 && <1.2,
                       compensated >=0.6 && <0.7,
                       polynomial >=0.7 && <0.8,
                       primes >=0.2 && <0.3,
                       vector-space >=0.8 && <0.9,
                       statistics >=0.11 && <0.12
  default-language:    Haskell2010
