name:                ErrorProp
version:             0.1.0.0
synopsis:            error/uncertainty propagation
description:         a work in progress
license:             BSD3
license-file:        LICENSE
author:              Adam Vogt <vogt.adam@gmail.com>
maintainer:          Adam Vogt <vogt.adam@gmail.com>
category:            Math
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.10.4

library
  exposed-modules:     ErrorProp.MonteCarlo,
                       ErrorProp.Linearized,
                       ErrorProp.QuasiMC,
                       ErrorProp.QuasiMC.Cukier,
                       ErrorProp.Common
  other-extensions:    FlexibleContexts,
                       FlexibleInstances,
                       DefaultSignatures,
                       Rank2Types,
                       BangPatterns
  build-depends:       base,
                       mersenne-random,
                       containers,
                       vector,
                       xformat,
                       ad,
                       pretty,
                       compensated,
                       polynomial,
                       primes,
                       vector-space,
                       statistics,
                       free
  default-language:    Haskell2010
